--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Circle game</title>
-    <script src="index.js"></script>
   </head>
   <body>
-    <canvas width="800" height="600"></canvas>
+    <canvas
+      width="400"
+      height="300"
+      id="canvas"
+      style="border: 1px solid red;"
+    ></canvas>
+    <script src="index.js"></script>
   </body>
 </html>
