--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Circle game</title>
   </head>
-  <body>
+  <body style="margin: 0;">
     <canvas
-      width="400"
-      height="300"
+      width="498"
+      height="600"
       id="canvas"
       style="border: 1px solid red;"
     ></canvas>
